--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -31,24 +31,24 @@
                   </div>
                 </div> -->
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-4 col-6 ">
-                  <div class="widget widget_footer">
+                  <!-- <div class="widget widget_footer">
                     <h3 class="widget-title">Información</h3>
                     <ul>
                       <li><a href="#">Sobre nosotros</a></li>
                       <li><a href="#">Contacto</a></li>
                       <li><a href="#">Terms & Conditions</a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-4 col-6 ">
-                  <div class="widget widget_footer">
+                  <!-- <div class="widget widget_footer">
                     <h3 class="widget-title">Enlaces de interes</h3>
                     <ul>
                       <li><a href="#">My cuenta</a></li>
                       <li><a href="#">Orders Tracking</a></li>
                       <li><a href="#">FAQs</a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
