--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -2,233 +2,32 @@
 
       <div class="ps-shopping">
         <div class="container">
-          <div class="ps-filter--shopping"><a class="ps-filter__trigger" href="shop-4-column.html#" id="filter-sidebar"><i class="fa fa-sliders"></i></a>
-            <div class="ps-filter__column-switch"><a class="two" href="shop-2-column.html"></a><a class="three" href="shop-3-column.html"></a><a class="active four" href="shop-4-column.html"></a><a class="six" href="shop-6-column.html"></a></div>
-            <div class="form-group--select"><i class="fa fa-angle-down"></i>
-              <div class="form-group__content">
-                <select class="form-control">
-                  <option value="1">Sort by Lastest</option>
-                  <option value="1">Sort by Price</option>
-                  <option value="1">Sort by Average Rating</option>
-                </select>
-              </div>
-            </div>
-          </div>
+          
           <div class="ps-shopping__content">
             <div class="row">
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-1-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-1-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
+              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 " *ngFor="let tix of tixs">
+                <div class="ps-product" routerLink="/productdetail/{{tix.id}}">
+
+                  <div class="ps-product__thumbnail">
+                    <a class="ps-product__overlay" >
+                      
+                    </a><a class="ps-product__img" ><img src="{{tix.images[0]}}" alt=""/></a><a class="ps-product__img-alt"><img src="{{tix.images[1]}}" alt=""/></a><a class="ps-product__favorite" ><i class="fa fa-heart-o"></i></a>
                     <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
+                      <li><a routerLink="/productdetail/{{tix.id}}">Ver Detalles</a></li>
+                      
                     </ul>
-                    <p class="ps-product__size">S, M, L</p>
+                    <p class="ps-product__size">{{tix.diemnsiones}}</p>
                   </div>
                   <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Analogue Resin Strap Watch</a>
-                    <p class="ps-product__price"> $85.00</p>
+                    <div class="ps-product__meta"><a ></a></div><a class="ps-product__title" >{{tix.productName}}</a>
+                    <p class="ps-product__price">CLP {{tix.globalPrice}} </p>
                   </div>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-2-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-2-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">ASOS Ridley High Waist</a>
-                    <p class="ps-product__price"> $36.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-3-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-3-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Brown Sneaker Shoes</a>
-                    <p class="ps-product__price"> $45.00 – $53.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-4-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-4-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Calvin Klein Logo Sweatpants</a>
-                    <p class="ps-product__price"> $35.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><span class="ps-product__badge"><i> - 14.3%</i></span><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-5-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-5-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Cluse La Bohème Rose Gold</a>
-                    <p class="ps-product__price sale"> <del>$35.00</del>$30.00</p>
-                    <div class="ps-product__color">
-                      <div class="ps-radio ps-radio--color ps-radio--inline color-1">
-                        <input class="form-control" type="radio" id="color-undefined47" name="color-undefined"/>
-                        <label for="color-undefined47"></label>
-                      </div>
-                      <div class="ps-radio ps-radio--color ps-radio--inline color-2">
-                        <input class="form-control" type="radio" id="color-undefined48" name="color-undefined"/>
-                        <label for="color-undefined48"></label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><span class="ps-product__badge disabled"><i>Sold Out</i></span><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-6-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-6-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Cuffed Beanie</a>
-                    <p class="ps-product__price"> $15.00</p>
-                    <div class="ps-product__color">
-                      <div class="ps-radio ps-radio--color ps-radio--inline color-1">
-                        <input class="form-control" type="radio" id="color-undefined16" name="color-undefined"/>
-                        <label for="color-undefined16"></label>
-                      </div>
-                      <div class="ps-radio ps-radio--color ps-radio--inline color-2">
-                        <input class="form-control" type="radio" id="color-undefined70" name="color-undefined"/>
-                        <label for="color-undefined70"></label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-7-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-7-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Cyan Boheme</a>
-                    <p class="ps-product__price"> $45.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-8-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-8-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Denim Shell Top with Ruffle Front</a>
-                    <p class="ps-product__price"> $56.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/trend-1-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/trend-1-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Cyan Boheme</a>
-                    <p class="ps-product__price"> $85.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><span class="ps-product__badge"><i> - 14.3%</i></span><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/trend-5-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/trend-5-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Pink Leather Watch</a>
-                    <p class="ps-product__price sale"> <del>$35.00</del>$30.00</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-6-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-6-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Cuffed Beanie</a>
-                    <p class="ps-product__price"> $15.00</p>
-                    <div class="ps-product__color">
-                      <div class="ps-radio ps-radio--color ps-radio--inline color-1">
-                        <input class="form-control" type="radio" id="color-undefined38" name="color-undefined"/>
-                        <label for="color-undefined38"></label>
-                      </div>
-                      <div class="ps-radio ps-radio--color ps-radio--inline color-2">
-                        <input class="form-control" type="radio" id="color-undefined68" name="color-undefined"/>
-                        <label for="color-undefined68"></label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12 ">
-                <div class="ps-product">
-                  <div class="ps-product__thumbnail"><a class="ps-product__overlay" href="product-standard.html"></a><a class="ps-product__img" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-7-1.jpg" alt=""/></a><a class="ps-product__img-alt" href="product-standard.html"><img src="assets/assetslameseria/img/product/best-7-2.jpg" alt=""/></a><a class="ps-product__favorite" href="shop-4-column.html#"><i class="fa fa-heart-o"></i></a>
-                    <ul class="ps-product__actions">
-                      <li><a href="product-standard.html">Quick Shop</a></li>
-                      <li><a href="product-standard.html">Add to cart</a></li>
-                    </ul>
-                    <p class="ps-product__size">S, M, L</p>
-                  </div>
-                  <div class="ps-product__content">
-                    <div class="ps-product__meta"><a href="shop-2-column.html"></a></div><a class="ps-product__title" href="product-standard.html">Cyan Boheme</a>
-                    <p class="ps-product__price"> $45.00</p>
-                  </div>
-                </div>
-              </div>
+             
             </div>
           </div>
-          <div class="ps-shopping__footer"><a class="ps-btn ps-btn--outline ps-btn--black" href="shop-4-column.html#">Load more</a></div>
+          <div class="ps-shopping__footer"><a class="ps-btn ps-btn--outline ps-btn--black" >Cargar más</a></div>
         </div>
       </div>
     </div>
