--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -16,7 +16,7 @@
                       <li><a routerLink="/productdetail/{{tix.id}}">Ver Detalles</a></li>
                       
                     </ul>
-                    <p class="ps-product__size">{{tix.diemnsiones}}</p>
+                    <p class="ps-product__size">{{tix.dimensiones}}</p>
                   </div>
                   <div class="ps-product__content">
                     <div class="ps-product__meta"><a ></a></div><a class="ps-product__title" >{{tix.productName}}</a>
