--- a/src/app/components/testapp/testapp.component.html
+++ b/src/app/components/testapp/testapp.component.html
@@ -17,7 +17,7 @@
         </div>
         <ul class="menu--mobile">
       
-          <li class="menu-item-has-children"><a class="has-badge" href="shop-4-column.html">Shop</a><span class="sub-toggle"></span>
+          <li class="menu-item-has-children"><a class="has-badge" routerLink="shop">Catalogo</a><span class="sub-toggle"></span>
         
           </li>
        
@@ -41,7 +41,7 @@
                     <ul class="ps-product__actions">
                       <li><a routerLink="/productdetail/{{tix.id}}">Ver detalles</a></li>
                     </ul>
-                    <p class="ps-product__size">Dimensiones: </p>
+                    <!-- <p class="ps-product__size">Dimensiones: </p> -->
                     <p class="ps-product__size">{{tix.dimensiones}}</p>
                   </div>
                   <div class="ps-product__content">
@@ -63,16 +63,16 @@
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12  ">
               <div class="ps-block--collection"><a href="shop-4-column.html"></a><img src="assets/assetslameseria/img/collection/collection-1.jpg" alt="">
                 <div class="ps-block__content">
-                  <h4>Lookbook 2018</h4>
-                  <p>Make love this look</p>
+                  <h4>Una buena Mesa es un buen comedor</h4>
+                  <!-- <p>Mesa de comedor Riñihue</p> -->
                 </div>
               </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12  ">
               <div class="ps-block--collection"><a href="shop-4-column.html"></a><img src="assets/assetslameseria/img/collection/collection-2.jpg" alt="">
                 <div class="ps-block__content">
-                  <h5>Summer Sale</h5>
-                  <h2>Up to 70%</h2>
+                  <h4>Personaliza tus espacios </h4><!-- 
+                  <h2>Mesa de centro Llanquihe </h2> -->
                 </div>
               </div>
             </div>
