--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
                 </figure>
                 <ul class="ps-list--social">
                   <li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="https://www.instagram.com/lameseria.cl/" target="_blanck"><i class="fa fa-instagram"></i></a></li>
+                  <li><a href="https://www.instagram.com/lameseria.cl/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
